# twisstntern_v2

./: .gitignore  5pop.py  Dashas_notebook.ipynb  HYDRA_USAGE.md  HYDRA_USAGE_UPDATED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  TODO.txt  colormap_demo.py  compare_with_twisstCompareEx.py  comparison_summary_alpha_0.1.csv  comprehensive_cli_test.py  comprehensive_sinkhorn_test.py  config_template.yaml  config_template1.yaml  debug_environment.py  debugs.py  generate_colormap_examples.py  generate_trees.py  hello.py  original_twisstntern.py  performance_comparison.py  pyproject.toml  requirements.txt  sample_data.csv  setup.py  simple_density_plot.py  test_colormaps.py  test_comprehensive_twisstntern_cli.py  test_dasha_approach.py  test_full_pipeline.py  test_newick_processing.py  test_twisstntern.py  triangle_results_alpha_0.1.csv  twisstCompareEx.py  twisstntern.py  twisstntern_user_interface.ipynb  (+5 more)
Colors/: ne0.20_triangle_analysis.csv
Examples/: Figures.py  Figures_Notebook_4_DASHA.ipynb  Figures_Notebook_4_DASHA_BACKUP.ipynb  chrom_VS_loci.py  demo.ipynb  demo_backup.ipynb  metrics.py  twisstntern_user_interface_csv.py
Results/: A_m0.csvEDITED_results_granuality_coarse.csv  A_m0EDITED_triangle_analysis.csv  A_m0_results_granuality_coarse.csv  B_m0.001_results_granuality_fine.csv  CHROM_pop_plain_topology_weights.csv  CHROM_pop_topology_weights.csv  CHROM_pop_triangle_analysis.csv  CHROM_topology_weights.csv  CHROM_triangle_analysis.csv  E_m0.03_triangle_analysis.csv  I_m0.06_trimmed_triangle_analysis_0.1.csv  TRUTH_m_results_granuality_fine.csv  X8_topology_weights.csv  X8_triangle_analysis.csv  chromosome_topology_weights.csv  chromosome_trees.newick  chromosome_triangle_analysis.csv  dasha_approach_LOCUS_topology_weights.csv  dasha_approach_LOCUS_triangle_analysis.csv  locus_triangle_analysis_0.1.csv  migration_topology_weights_triangle_analysis.csv  ne0.05_results_granuality_fine.csv  ne0.20_triangle_analysis.csv  ne0.23_triangle_analysis.csv  ne0.23_triangle_analysis_0.05.csv  ne0.25_triangle_analysis_0.05.csv  ne0.25_triangle_analysis_0.25.csv  ne0.27_results_granuality_coarse.csv  ne0.27_triangle_analysis_0.01.csv  ne0.27_triangle_analysis_0.1.csv  ne0.45_triangle_analysis.csv  simple_replicates_LOCUS_topology_weights.csv  simple_replicates_LOCUS_triangle_analysis.csv  ts_topology_weights.csv  ts_triangle_analysis.csv  tss_topology_weights.csv  tss_triangle_analysis.csv
ResultsDasha/: locus_topology_weights.csv  locus_triangle_analysis.csv
ResultsDashaTree/: locus_trees_topology_weights.csv  locus_trees_triangle_analysis.csv
ResultsNm/: chromosome_triangle_analysis.csv
ResultsNotDashaTree/: locus_trees_topology_weights.csv  locus_trees_triangle_analysis.csv
ResultsOther/: locus_topology_weights.csv  locus_triangle_analysis.csv
Results_2025-07-03_11-28-31/: locus_topology_weights.csv  locus_trees.newick
Results_2025-10-02_12-25-27/: D_m0.02_triangle_analysis_0.1.csv
Results_2025-10-02_13-37-35/: chromosome_topology_weights.csv  chromosome_triangle_analysis_0.1.csv
Resultsm/: chromosome_triangle_analysis.csv
colors/: NoMigration_topology_weights_triangle_analysis.csv
conf/: config.yaml  simulate_config.yaml
dataCompare/: NoMigration_topology_weights_trimmed.csv  OLD_residual_analysis_WORKS.py  comprehensive_sinkhorn_test.py  comprehensive_sinkhorn_test_full.py  consistency_test.py  enhanced_residual_analysis.py  fast_topology_metrics.py  kl_wasserstein_tuning_results.csv  metrics.py  regularization_tuning_results.csv  residual_analysis.py  test_alternative_algorithms.py  test_regularization_tuning.py  tune_kl_wasserstein.py
enhanced_residual_results/: enhanced_residual_results_granularity_0.1.csv  enhanced_summary_statistics_granularity_0.1.txt
gene_flow_sims/: A_m0.csv  A_m0EDITED.csv  B_m0.001.csv  C_m0.01_C.csv  I_m0.06.csv  (+5 more)
(+237 files in other folders)
