[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twisstntern"
version = "0.1.0"
description = "A package for analyzing ternary data from topology weights"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hila Lifchitz", email = "hila.lifchitz@ist.ac.at"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["phylogenetics", "topology", "ternary-plots", "twisst", "tree-analysis"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "tskit>=0.4.0",
    "msprime>=1.0.0",
    "ete3>=3.1.0",
    "pyyaml>=6.0.0",
    "requests>=2.25.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.4.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
]

[project.urls]
"Homepage" = "https://github.com/HilaLifchitz/twisstntern_v2"
"Bug Reports" = "https://github.com/HilaLifchitz/twisstntern_v2/issues"
"Source" = "https://github.com/HilaLifchitz/twisstntern_v2"
"Documentation" = "https://github.com/HilaLifchitz/twisstntern_v2#readme"

# CLI entry points
[project.scripts]
# Main analysis commands
twisstntern = "src.twisstntern.main:main"
twisst-analyze = "src.twisstntern.main:main"

# Simulation commands (now using Hydra)
twisstntern-simulate = "src.twisstntern_simulate.main:main"
twisst-simulate = "src.twisstntern_simulate.main:main"

# Custom command placeholders (uncomment to enable)
# Note: You need to implement the corresponding command classes in cli/base.py
# twisst-custom = "twisstntern.cli.custom:main"
# twisst-batch = "twisstntern.cli.batch:main"
# twisst-compare = "twisstntern.cli.compare:main"
# twisst-plot = "twisstntern.cli.plot:main"
# twisst-convert = "twisstntern.cli.convert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "legacy*"]

[tool.setuptools.package-data]
"src.twisstntern" = ["external/*", "configs/*.yaml", "configs/**/*.yaml"]
"src.twisstntern_simulate" = ["external/*", "configs/*.yaml", "configs/**/*.yaml"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# UV-specific configurations
[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]

# Build configuration for uv
[tool.uv.sources]
# Add any private dependencies or development sources here 
